<resources>
    <string name="app_name">Project 2</string>
    <string name="title_search">Search</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_add_item">Add Item to Shopping List</string>
    <string name="text_keywords">Keywords</string>
    <string name="text_minPrice">Minimum Price</string>
    <string name="text_maxPrice">Maximum Price</string>
    <string name="text_shoppingSite">Shopping Site</string>
    <string name="text_label">Label</string>
    <string name="text_url">URL</string>
    <string name="text_save">Save</string>
    <string name="text_visit">Visit</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>

    <string-array name="sitesDropdown">
        <item>Amazon</item>
        <item>Google Shopping</item>
        <item>Ebay</item>
    </string-array>
</resources>
